--- a/CS/pdf-form-fields/pdf-form-fields.csproj
+++ b/CS/pdf-form-fields/pdf-form-fields.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>pdf_form_fields</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Document.Processor" Version="21.1.6" />
+    <PackageReference Include="DevExpress.Document.Processor" Version="23.2.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Documents\FormDemo.pdf">
