--- a/VB/pdf-form-fields/pdf-form-fields.vbproj
+++ b/VB/pdf-form-fields/pdf-form-fields.vbproj
@@ -2,12 +2,12 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>
     </RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Document.Processor" Version="21.1.7" />
+    <PackageReference Include="DevExpress.Document.Processor" Version="23.2.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Documents\FormDemo.pdf">
